--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
 			Một thứ gì đó
 		</Title>
 		<style>
-			video {
-				position: relative;
-				top: 100;
-				width: 100%;
-				height: 100%;
+			video{
+			    object-fit: cover;
+			    position: absolute;
+			    top: 0;
+			    left: 0;
+			    height: 100%;
+			    width: 100%;
+			    filter: blur(8px);
+			    -webkit-filter: blur(8px);
+			    background-position: center;
 			}
 		</style>
 	</Head>
